# crewagents

./: README.md  pyproject.toml  report.md
src/crewagents/: crew.py  main.py
