[project]
name = "crewagents"
version = "0.1.0"
description = "crewagents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
crewagents = "crewagents.main:run"
run_crew = "crewagents.main:run"
train = "crewagents.main:train"
replay = "crewagents.main:replay"
test = "crewagents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
